--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.21",
+    "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.10.1",
     "gatsby-plugin-google-analytics": "^3.10.0",
     "gatsby-plugin-image": "^1.10.1",
@@ -25,13 +26,15 @@
     "gatsby-plugin-sass": "^4.10.0",
     "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-plugin-sitemap": "^4.6.0",
+    "gatsby-plugin-styled-components": "^4.10.0",
     "gatsby-source-filesystem": "^3.10.0",
     "gatsby-transformer-sharp": "^3.10.0",
     "graphql": "^15.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "sass": "^1.35.2"
+    "sass": "^1.35.2",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "svg-react-loader": "^0.4.6"
