--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.21",
+    "@reduxjs/toolkit": "^1.6.1",
     "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.10.1",
     "gatsby-plugin-google-analytics": "^3.10.0",
