--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "sass": "^1.35.2",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "subscriptions-transport-ws": "^0.9.19"
   },
   "devDependencies": {
     "svg-react-loader": "^0.4.6"
