--- a/package.json
+++ b/package.json
@@ -15,28 +15,29 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@apollo/client": "^3.4.10",
+    "@apollo/client": "^3.4.12",
     "@reduxjs/toolkit": "^1.6.1",
     "babel-plugin-styled-components": "^1.13.2",
-    "gatsby": "^3.12.1",
+    "gatsby": "^3.14.0",
     "gatsby-plugin-apollo": "^3.0.2",
-    "gatsby-plugin-google-analytics": "^3.12.0",
-    "gatsby-plugin-image": "^1.12.0",
-    "gatsby-plugin-manifest": "^3.12.0",
-    "gatsby-plugin-react-helmet": "^4.12.0",
+    "gatsby-plugin-google-analytics": "^3.14.0",
+    "gatsby-plugin-image": "^1.14.0",
+    "gatsby-plugin-manifest": "^3.14.0",
+    "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-react-svg": "^3.0.1",
-    "gatsby-plugin-sass": "^4.12.0",
-    "gatsby-plugin-sharp": "^3.12.0",
-    "gatsby-plugin-sitemap": "^4.8.0",
-    "gatsby-plugin-styled-components": "^4.12.0",
-    "gatsby-source-filesystem": "^3.12.0",
-    "gatsby-transformer-sharp": "^3.12.0",
-    "graphql": "^15.5.1",
+    "gatsby-plugin-sass": "^4.14.0",
+    "gatsby-plugin-sharp": "^3.14.0",
+    "gatsby-plugin-sitemap": "^4.10.0",
+    "gatsby-plugin-styled-components": "^4.14.0",
+    "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-transformer-sharp": "^3.14.0",
+    "graphql": "^15.5.3",
     "isomorphic-fetch": "^3.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "sass": "^1.38.2",
+    "sass": "^1.41.1",
+    "sharp": "^0.29.1",
     "styled-components": "^5.3.1",
     "subscriptions-transport-ws": "^0.9.19"
   },
