--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "game-of-life-front",
   "version": "1.0.0",
-  "private": true,
   "description": "game-of-life-front",
   "author": "mgxmajewski",
   "keywords": [
@@ -18,6 +17,7 @@
     "@apollo/client": "^3.4.12",
     "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.14.0",
+    "gatsby-plugin-apollo": "^3.0.2",
     "gatsby-plugin-google-analytics": "^3.14.0",
     "gatsby-plugin-image": "^1.14.0",
     "gatsby-plugin-manifest": "^3.14.0",
@@ -26,14 +26,20 @@
     "gatsby-plugin-sass": "^4.14.0",
     "gatsby-plugin-sharp": "^3.14.0",
     "gatsby-plugin-sitemap": "^4.10.0",
+    "gatsby-plugin-styled-components": "^4.14.0",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-transformer-sharp": "^3.14.0",
     "graphql": "^15.5.3",
+    "isomorphic-fetch": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "sass": "^1.41.1",
+    "sharp": "^0.29.1",
     "styled-components": "^5.3.1",
     "subscriptions-transport-ws": "^0.9.19"
+  },
+  "devDependencies": {
+    "svg-react-loader": "^0.4.6"
   }
 }
