--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.14.0",
     "gatsby-plugin-apollo": "^3.0.2",
+    "gatsby-plugin-eslint": "^4.0.1",
     "gatsby-plugin-google-analytics": "^3.14.0",
     "gatsby-plugin-image": "^1.14.0",
     "gatsby-plugin-manifest": "^3.14.0",
@@ -35,7 +36,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "sass": "^1.41.1",
-    "sharp": "^0.29.1",
+    "sharp": "^0.29.2",
     "styled-components": "^5.3.1",
     "subscriptions-transport-ws": "^0.9.19"
   },
