--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^3.14.0",
     "graphql": "^15.5.3",
     "isomorphic-fetch": "^3.0.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "subscriptions-transport-ws": "^0.9.19"
