Install dotenv module.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@apollo/client": "^3.4.12",
     "abab": "^2.0.5",
+    "dotenv": "^10.0.0",
     "gatsby": "^3.14.0",
     "graphql": "^15.5.3",
     "isomorphic-fetch": "^3.0.0",
